--- a/indeeex.html
+++ b/indeeex.html
@@ -9,7 +9,7 @@
             <li>Vagrant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Integracíon Continua</li>
+            <li>Integración Continua</li>
         </ul>
     </body>
 </html>
